tests/tektoncd/tektoncd-dashboard/overlays/istio/test_data/expected/default_networking.istio.io_v1alpha3_virtualservice_tektoncd-dashboard.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tektoncd-dashboard
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /tektoncd-dashboard
    rewrite:
      uri: /tektoncd-dashboard
    route:
    - destination:
        host: tekton-dashboard..svc.cluster.local
        port:
          number: 80
    timeout: 300s
