tests/tektoncd/tektoncd-dashboard/overlays/istio/test_data/expected/default_~g_v1_configmap_tektoncd-dashboard-parameters-4f847868k2.yaml
apiVersion: v1
data:
  clusterDomain: cluster.local
  namespace: ""
kind: ConfigMap
metadata:
  name: tektoncd-dashboard-parameters-4f847868k2
