tests/tektoncd/tektoncd-dashboard/overlays/istio/test_data/expected/tekton-pipelines_tekton.dev_v1alpha1_pipeline_pipeline0.yaml
apiVersion: tekton.dev/v1alpha1
kind: Pipeline
metadata:
  name: pipeline0
  namespace: tekton-pipelines
spec:
  params:
  - default: /workspace/git-source
    description: The path to the resource files to apply
    name: pathToResourceFiles
  - default: .
    description: The directory from which resources are to be applied
    name: apply-directory
  - default: tekton-pipelines
    description: The namespace in which to create the resources being imported
    name: target-namespace
  resources:
  - name: git-source
    type: git
  tasks:
  - name: pipeline0-task
    params:
    - name: pathToResourceFiles
      value: ${params.pathToResourceFiles}
    - name: apply-directory
      value: ${params.apply-directory}
    - name: target-namespace
      value: ${params.target-namespace}
    resources:
      inputs:
      - name: git-source
        resource: git-source
    taskRef:
      name: pipeline0-task
